--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -15,4 +15,5 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '^1.14.6'
+      - run: go get -dv ./vaccine-bot
       - run: go test -v ./vaccine-bot
