--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -1,4 +1,4 @@
-name: Build and deploy vaccine twitter bot
+name: Build
 on:
   push:
     branches:
@@ -19,3 +19,16 @@ jobs:
         run: go get -d -v ./vaccine-bot
       - name: Running unit tests
         run: go test -v ./vaccine-bot
+  
+  deploy:
+    name: Build and deploy artifact
+    runs-on: ubuntu-latest
+    needs:
+      - test
+    steps:
+      - uses: actions/checkout@master
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '^1.14.6'
+      - name: Building lambda deployment package
+        run: sam build
