--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -11,7 +11,7 @@ jobs:
     name: Test code
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@main
       - uses: actions/setup-go@v2
         with:
           go-version: '^1.14.6'
@@ -26,7 +26,7 @@ jobs:
     needs:
       - test
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@main
       - uses: actions/setup-go@v2
         with:
           go-version: '^1.14.6'
@@ -42,4 +42,4 @@ jobs:
       - name: Deploying lambda
         env:
           DEPLOY_BUCKET: ${{ secrets.SAM_ARTIFACT_BUCKET }}
-        run: sam deploy --bucket "$DEPLOY_BUCKET" --capabilities CAPABILITY_IAM --stack-name vaccine-bot --no-fail-on-empty-changeset
+        run: sam deploy --s3-bucket "$DEPLOY_BUCKET" --capabilities CAPABILITY_IAM --stack-name vaccine-bot --no-fail-on-empty-changeset
