--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -37,6 +37,10 @@ jobs:
           aws-region: ap-southeast-2
           role-to-assume: ${{ secrets.AWS_DEPLOY_ROLE }}
           role-duration-seconds: 3000
+      - name: Updating Secrets Manager secret value
+        env:
+          TWITTER_SECRET: ${{ secrets.TWITTER_SECRET_OBJECT }}
+        run: ./scripts/update_secret.sh
       - name: Building lambda deployment package
         run: sam build
       - name: Deploying lambda
