--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -37,13 +37,13 @@ jobs:
           aws-region: ap-southeast-2
           role-to-assume: ${{ secrets.AWS_DEPLOY_ROLE }}
           role-duration-seconds: 3000
-      - name: Updating Secrets Manager secret value
-        env:
-          TWITTER_SECRET: ${{ secrets.TWITTER_SECRET_OBJECT }}
-        run: .github/scripts/update_secret.sh
       - name: Building lambda deployment package
         run: sam build
       - name: Deploying lambda
         env:
           DEPLOY_BUCKET: ${{ secrets.SAM_ARTIFACT_BUCKET }}
-        run: sam deploy --s3-bucket "$DEPLOY_BUCKET" --capabilities CAPABILITY_IAM --stack-name vaccine-bot --no-fail-on-empty-changeset
+          CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+          CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+          ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+          ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
+        run: sam deploy --s3-bucket "$DEPLOY_BUCKET" --capabilities CAPABILITY_IAM --stack-name vaccine-bot --no-fail-on-empty-changeset --parameter-overrides ConsumerKey=${CONSUMER_KEY} ConsumerSecret=${CONSUMER_SECRET} AccessToken=${AccessToken} AccessSecret=${ACCESS_SECRET}
