--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -31,6 +31,8 @@ jobs:
         with:
           go-version: '^1.14.6'
       - uses: aws-actions/configure-aws-credentials@v1
+        env:
+          GITHUB_ACTION: true
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
