--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -1,20 +1,25 @@
 name: Build
+
 on:
   push:
     branches:
-      - master
+      - main
     paths-ignore:
       - README.md
+
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
   test:
     name: Test code
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@main
+      - uses: actions/checkout@v3
       - uses: actions/setup-go@v2
         with:
-          go-version: '^1.14.6'
+          go-version: '^1.19.2'
       - name: Download dependencies
         run: go get -d -v ./vaccine-bot
       - name: Running unit tests
@@ -26,24 +31,23 @@ jobs:
     needs:
       - test
     steps:
-      - uses: actions/checkout@main
+      - uses: actions/checkout@v3
       - uses: actions/setup-go@v2
         with:
-          go-version: '^1.14.6'
+          go-version: '^1.19.2'
+      - uses: aws-actions/setup-sam@v2
       - uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-southeast-2
           role-to-assume: ${{ secrets.AWS_DEPLOY_ROLE }}
+          role-session-name: vaccinebotaction
           role-duration-seconds: 3000
       - name: Building lambda deployment package
         run: sam build
       - name: Deploying lambda
         env:
-          DEPLOY_BUCKET: ${{ secrets.SAM_ARTIFACT_BUCKET }}
           CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
           CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
           ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
           ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
-        run: sam deploy --s3-bucket "$DEPLOY_BUCKET" --capabilities CAPABILITY_IAM --stack-name vaccine-bot --no-fail-on-empty-changeset --parameter-overrides ConsumerKey=${CONSUMER_KEY} ConsumerSecret=${CONSUMER_SECRET} AccessToken=${ACCESS_TOKEN} AccessSecret=${ACCESS_SECRET}
+        run: sam deploy --no-confirm-changeset --resolve-s3 --capabilities CAPABILITY_IAM --stack-name vaccine-bot --no-fail-on-empty-changeset --parameter-overrides ConsumerKey=${CONSUMER_KEY} ConsumerSecret=${CONSUMER_SECRET} AccessToken=${ACCESS_TOKEN} AccessSecret=${ACCESS_SECRET}
